add the company form

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
 
 <div>
 <% if current_user%>
-  <%= link_to t('layouts.application.sign_out'), sign_out_path, method: :delete %>
+  <%= button_to t('layouts.application.sign_out'), sign_out_path, method: :delete %>
 <%else%>
   <%= link_to t('layouts.application.sign_in'), sign_in_path %>
 <%end%>
