--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @article do |form| %>
+<%= form_with model: @company do |form| %>
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
