Only allow admin to create a company

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <%= render "flashes" -%>
-    <main class="container mx-auto mt-10 px-5">
+    <main class="container mx-auto mt-10">
       <%= yield %>
     </main>
   </body>
