--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,9 @@
-<div class="w-full bg-slate-300">
+<div class="w-full">
   <h1 class="font-bold ">Welcome to Anity jobs</h1>
 </div>
 
-<div class="w-full bg-slate-300">
-<%= link_to 'create Company', new_company_path %>
+<div class="w-full my-4">
+  <%= link_to 'create Company', new_company_path , class: "bg-yellow-300 rounded p-2 font-bold" %>
 </div>
 
 <div>
