Only allow admin to create a company

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -7,7 +7,7 @@
     <%= form.label :description %>
     <%= form.rich_text_area :description %>
   </div>
-  <div class="field">
-    <%= form.submit%>
+  <div class="field my-2">
+    <%= form.submit class:"bg-blue-300 rounded p-2 font-bold"%>
   </div>
 <% end %>
