create job details page

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -11,4 +11,14 @@
 }
 
 */
+
+.trix-content{
+  line-height: 1.5;
+  letter-spacing: 1px;
+}
+
+strong, b{
+  font-weight: 700;
+}
+
 @import 'actiontext.css';
