--- a/app/views/jobs/_job_preview.html.erb
+++ b/app/views/jobs/_job_preview.html.erb
@@ -1,8 +1,8 @@
-<div class = "job-prev bg-amber-100 py-4 px-8 mt-2">
-  <div>
-    <p class="font-normal"><%= job.company.name%></p>
+<%= link_to(job) do %>
+  <div class = "job-prev bg-amber-100 py-4 px-8 mt-2">
+    <p class="font-normal"><%=job.company.name%></p>
     <div class="flex justify-between py-1">
-      <%= link_to job.title, job, class:"font-bold text-lg" %>
+      <p class="font-bold"><%=job.title%></p>
       <div class="flex">
         <p><%= job.created_at.strftime("%Y-%m-%d")%></p>
         <p class="ml-4">Featured</p>
@@ -10,4 +10,4 @@
     </div>
     <p>Location: Congo🇨🇩</p>
   </div>
-</div>
+<%end%>
