Add Engkish/French translation
Add translation on creating new job form and use translated variables

Use the tarnslations variables in files

Ignore .vsoce/ directory

Add translation on create_comaniy form

Add translation on create_comaniy form

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,13 +1,13 @@
 <%= form_with model: @company do |form| %>
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label :name, t("companies.new.labels.name") %>
     <%= form.text_field :name %>
   </div>
   <div class="field">
-    <%= form.label :description %>
+    <%= form.label :description, t("companies.new.labels.description") %>
     <%= form.rich_text_area :description %>
   </div>
   <div class="field my-2">
-    <%= form.submit class:"bg-blue-300 rounded p-2 font-bold"%>
+    <%= form.submit t("companies.new.labels.create_company"), class:"bg-blue-300 rounded p-2 font-bold"%>
   </div>
 <% end %>
