--- a/app/views/jobs/_job_preview.html.erb
+++ b/app/views/jobs/_job_preview.html.erb
@@ -1,11 +1,11 @@
 <%= link_to(job) do %>
-  <div class = "job-prev bg-amber-100 py-4 px-8 mt-2">
+  <div class = "job-prev group bg-white drop-shadow hover:drop-shadow-md rounded py-4 px-8 mb-6">
     <p class="font-normal"><%=job.company.name%></p>
     <div class="flex justify-between py-1">
-      <p class="font-bold"><%=job.title%></p>
-      <div class="flex">
+      <p class="font-bold group-hover:underline decoration-red-500 decoration-2 underline-offset-2"><%=job.title%></p>
+      <div class="flex items-center">
         <p><%= job.created_at.strftime("%Y-%m-%d")%></p>
-        <p class="ml-4"><%= t("jobs.index.preview.featured") %></p>
+        <p class="ml-4 bg-amber-400 py-1/2 px-1 rounded"><%= t("jobs.index.preview.featured") %></p>
       </div>
     </div>
     <p><%= t("jobs.index.preview.location") %></p>
