--- a/app/views/jobs/_job_preview.html.erb
+++ b/app/views/jobs/_job_preview.html.erb
@@ -8,6 +8,6 @@
         <p class="ml-4 bg-amber-400 py-1/2 px-1 rounded"><%= t("jobs.index.preview.featured") %></p>
       </div>
     </div>
-    <p><%= t("jobs.index.preview.location") %></p>
+    <p><%= job.location.name %></p>
   </div>
 <%end%>
