--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,21 +1,21 @@
 <%= form_with model: @job do |form| %>
-  <div class="field my-2">
-    <%= form.label :title, t("jobs.new.labels.application_url") %>
+  <div class="field flex flex-col w-1/2 my-2">
+    <%= form.label :title, t("jobs.new.labels.title"), class: "font-bold" %>
     <%= form.text_field :title %>
   </div>
   <div class="field flex flex-col w-1/2 my-2">
-    <%= form.label :application_url, t("jobs.new.labels.title"), class: "font-bold" %>
+    <%= form.label :application_url, t("jobs.new.labels.url"), class: "font-bold" %>
     <%= form.text_field :application_url, class: "w" %>
   </div>
-  <div class="field my-2">
-    <%= form.label :company_id, t("jobs.new.labels.application_url"), class:"font-bold"%>
+  <div class="field flex flex-col w-1/2 my-2">
+    <%= form.label :company_id, t("jobs.new.labels.company"), class:"font-bold"%>
     <%= form.select :company_id, [["select Company",nil]]+Company.pluck(:name,:id), {}, class: "multiple" %>
   </div>
-  <div class="field my-2">
-    <%= form.label :description, t("jobs.new.labels.description") %>
+  <div class="field flex flex-col w-1/2 my-2">
+    <%= form.label :description, t("jobs.new.labels.description"), class: "font-bold" %>
     <%= form.rich_text_area :description %>
   </div>
-  <div class="field my-2">
-    <%= form.submit t("jobs.new.labels.get_in_touch"),class:"bg-blue-300 rounded p-2 font-bold"%>
+  <div class="field flex flex-col w-1/2 my-2 cursor-pointer">
+    <%= form.submit t("jobs.new.labels.apply"),class:"bg-blue-300 rounded p-2 font-bold"%>
   </div>
 <% end %>
