Add test for location and associate it in factory

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -16,6 +16,6 @@
     <%= form.rich_text_area :description %>
   </div>
   <div class="field flex flex-col w-1/2 my-2 cursor-pointer">
-    <%= form.submit t("jobs.new.labels.apply"),class:"bg-blue-300 rounded p-2 font-bold"%>
+    <%= form.submit t("jobs.new.labels.create"),class:"bg-blue-300 rounded p-2 font-bold"%>
   </div>
 <% end %>
