--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -5,7 +5,7 @@
         Posted: <%= @job.created_at.strftime("%Y-%m-%d")%>
       </p>
       <p class="text-3xl font-bold my-2"><%=@job.title%></p>
-      <p class="mb-2">Location: Congo🇨🇩</p>
+      <p class="mb-2">Location: <%=@job.location.name%></p>
       <div class="flex">
         <span class="text-gray-600 underline mr-2">Skills</span>
         <span class="text-gray-600 underline mr-2">Skills</span>
