--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -12,10 +12,18 @@
     <%= form.select :company_id, [["select Company",nil]]+Company.pluck(:name,:id), {}, class: "multiple" %>
   </div>
   <div class="field flex flex-col w-1/2 my-2">
+    <%= form.label :category_id, t("jobs.new.labels.category"), class:"font-bold"%>
+    <%= form.select :category_id, [["select Category",nil]]+Category.pluck(:name,:id), {}, class: "multiple" %>
+  </div>
+  <div class="field flex flex-col w-1/2 my-2">
+    <%= form.label :location_id, t("jobs.new.labels.location"), class:"font-bold"%>
+    <%= form.select :location_id, [["select Location",nil]]+Location.pluck(:name,:id), {}, class: "multiple" %>
+  </div>
+  <div class="field flex flex-col w-1/2 my-2">
     <%= form.label :description, t("jobs.new.labels.description"), class: "font-bold" %>
     <%= form.rich_text_area :description %>
   </div>
   <div class="field flex flex-col w-1/2 my-2 cursor-pointer">
-    <%= form.submit t("jobs.new.labels.create"),class:"bg-blue-300 rounded p-2 font-bold"%>
+    <%= form.submit t("jobs.new.labels.create"),class:"bg-red-500 text-white rounded p-2 font-bold"%>
   </div>
 <% end %>
