--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,18 +1,26 @@
-<div class="w-1/2 mx-auto font-sans text-gray-800 font-light">
+<div class="w-11/12 md:w-1/2 mx-auto font-sans text-gray-800 font-light">
   <div>
+    <div class="nav-links text-sm items-center">
+      <span class="flex">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+        </svg>
+        <%= link_to t("navigation.all_jobs"), root_path %>
+      </span>
+    </div>
     <div class="job-title py-2 mb-4">
       <p class="text-gray-600">
-        Posted: <%= @job.created_at.strftime("%Y-%m-%d")%>
+        <%= t(".posted") %> <%= @job.created_at.strftime("%Y-%m-%d")%>
       </p>
       <p class="text-3xl font-bold my-2"><%=@job.title%></p>
-      <p class="mb-2">Location: <%=@job.location.name%></p>
+      <p class="mb-2"><%= t(".location") %> <%=@job.location.name%></p>
       <div class="flex">
         <span class="bg-amber-100 rounded font-bold text-black p-1 mr-2"><%= @job.category.name%></span>
       </div>
     </div>
     <%= @job.description%>
     <div class="apply-button my-4 py-4">
-      <%= link_to t("jobs.details.apply"), @job.application_url, target: :_blank, class:"bg-red-500 text-white p-3 font-semibold" %>
+      <%= link_to t(".apply"), @job.application_url, target: :_blank, class:"bg-red-500 text-white p-3 font-semibold" %>
     </div>
   </div>
 </div>
