--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,15 +1,13 @@
-<div class="search-form">
-  <%= form_with url: search_path, method: :get, local: true do |f| %>
-    <%= f.text_field :keyword, value: @keyword %>
-    <%= f.submit "Search" %>
-  <% end %>
-</div>
+<%= render partial: '/jobs/search_form' %>
+
 <div class="w-11/12 md:w-1/2 mx-auto">
   <%= render partial: '/jobs/job_preview', collection: @jobs, as: :job %>
 <div>
 <%= request.location.country %>
+<div class="hidden">
 <% if current_user %>
   <%= button_to 'Sign out', sign_out_path , method: :delete %>
 <% else %>
   <%= link_to 'Sign in', sign_in_path %>
 <% end %>
+</div>
