--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -4,7 +4,7 @@
   <%= render partial: '/jobs/job_preview', collection: @jobs, as: :job %>
 <div>
 
-<div class="hidden">
+<div class="">
 <% if current_user %>
   <%= button_to 'Sign out', sign_out_path , method: :delete %>
 <% else %>
