--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,9 +1,11 @@
-<div class="text-field">
-  <%= form.label :email %>
-  <%= form.text_field :email, type: 'email' %>
-</div>
+<%= form_with model: @user do |form| %>
+  <div class="text-field field flex flex-col w-11/12 md:w-1/2 my-2">
+    <%= form.label :email, class: "font-bold" %>
+    <%= form.text_field :email, type: 'email' %>
+  </div>
 
-<div class="password-field">
-  <%= form.label :password %>
-  <%= form.password_field :password %>
-</div>
+  <div class="password-field field flex flex-col w-11/12 md:w-1/2 my-2">
+    <%= form.label :password, class: "font-bold" %>
+    <%= form.password_field :password %>
+  </div>
+<% end %>
