--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,7 @@
     <%= render partial: '/users/form', object: form %>
 
   <div class="submit-field flex flex-col w-1/2 my-2">
-    <%= form.submit "Sing up", class:"bg-red-500 cursor-pointer text-white rounded p-2 font-bold" %>
+    <%= form.submit t("helpers.submit.user.create"), class:"bg-red-500 cursor-pointer text-white rounded p-2 font-bold" %>
   </div>
 
   <div class="other-links flex flex-col w-1/2 my-2">
