--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <title>AnityJobs</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="The job posting for africa Anity job posting.">
+    <link rel="icon" href="%PUBLIC_URL%/Anity_logo.png" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
