Create link to redirect to rss format

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -7,6 +7,11 @@
       <%= link_to t("navigation.all_jobs"), root_path %>
       <a href="https://twitter.com/AnityDevelopers" class="md:ml-2"><%= t("navigation.community") %></a>
       <a href="mailto:anitydevs@gmail.com" class="md:ml-2 bg-red-500 rounded text-white p-1 md:p-3 font-semibold"><%= t("navigation.get_in_touch") %></a>
+      <%= link_to jobs_url(format: 'rss') do %>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12.75 19.5v-.75a7.5 7.5 0 00-7.5-7.5H4.5m0-6.75h.75c7.87 0 14.25 6.38 14.25 14.25v.75M6 18.75a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+        </svg>
+      <%end%>
     </div>
     <div class="nav-toggler block md:hidden" data-target="toggler" data-action="click->nav#toggleMenu">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -20,6 +25,11 @@
       <%= link_to t("navigation.all_jobs"), root_path, class: "mb-2" %>
       <a href="https://twitter.com/AnityDevelopers" class="mb-2"><%= t("navigation.community") %></a>
       <a href="mailto:anitydevs@gmail.com" class="text-red-500 underline mb-2 font-semibold"><%= t("navigation.get_in_touch") %></a>
+      <%= link_to jobs_url(format: 'rss') do %>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12.75 19.5v-.75a7.5 7.5 0 00-7.5-7.5H4.5m0-6.75h.75c7.87 0 14.25 6.38 14.25 14.25v.75M6 18.75a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+        </svg>
+      <%end%>
     </div>
   </div>
 </div>
