--- a/app/views/dashboard/_main_page.html.erb
+++ b/app/views/dashboard/_main_page.html.erb
@@ -1,5 +1,10 @@
 <div class="w-6/12">
-  <h2 class="text-3xl font-bold ml-2">Hi, Victor!</h2>
+  <h2 class="text-2xl font-bold ml-2">Hi, 
+    <% if current_user.username ==nil %>
+            Anity!
+        <% else %>
+          <%= current_user.username %>!</h2>
+      <%end%>
   <div class="job-overview my-4  flex rounded p-2 w-100">
     <div class="job-overview--this-week p-2 bg-gray-100 box-border w-1/3 rounded drop-shadow-md">
       <h3 class="font-bold py-2">New Jobs this week</h3>
