We need to update the page title as the user views the Job

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, t("title.page_title") %>
+
 <%= render partial: '/jobs/search_form' %>
 
 <div class="w-11/12 md:w-1/2 mx-auto">
