--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Anity Jobs | #{@job.title}" %>
+
 <div class="w-11/12 md:w-1/2 mx-auto font-sans text-gray-800 font-light">
   <div>
     <div class="nav-links text-sm">
