add orders form to the dashboard

--- a/app/views/dashboard/_left_bar.html.erb
+++ b/app/views/dashboard/_left_bar.html.erb
@@ -6,9 +6,9 @@
     <%= link_to root_path, class: "pb-4 mb-2 rounded hover:bg-yellow-500" do%>
       <span>My Company</span>
     <%end%>
-    <%= link_to weekly_jobs_path, class: "pb-4 mb-2 rounded hover:bg-yellow-500" do%>
+    <%= link_to jobs_path, class: "pb-4 mb-2 rounded hover:bg-yellow-500" do%>
       <span>My Jobs</span>
-     
+
     <%end%>
   </div>
 </div>
