--- a/app/views/dashboard/_main_page.html.erb
+++ b/app/views/dashboard/_main_page.html.erb
@@ -1,8 +1,9 @@
 <div class="w-6/12">
-  <h2 class="text-1xl font-bold ml-2">Hi, 
+  <h2 class="text-1xl font-bold ml-2">Hi,
     <% if name?(current_user) %>
       <%= current_user.name %>
     <%end%>
+  </h2>
   <div class="job-overview my-4  flex rounded p-2 w-100">
     <div class="job-overview--this-week p-2 bg-gray-100 box-border w-1/3 rounded drop-shadow-md">
       <h3 class="font-bold py-2">New Jobs this week</h3>
@@ -22,4 +23,6 @@
       <p><%= current_user.jobs.count %></p>
     </div>
   </div>
+
+  <%= render partial: '/dashboard/links' %>
 </div>
