--- a/app/views/shared/_job_preview.html.erb
+++ b/app/views/shared/_job_preview.html.erb
@@ -1,5 +1,10 @@
-<%= link_to(job) do %>
+<%= link_to(job, class: "relative") do %>
   <div class = "job-prev group bg-white drop-shadow hover:drop-shadow-md rounded py-2 sm:py-4 px-2 sm:px-8 sm:mb-6 mb-6 whitespace-nowrap text-sm md:text-base">
+    <%if job.company.logo.present?%>
+    <div class="w-14 h-14 rounded-full absolute -left-10 border-2 top-5 overflow-hidden hidden sm:block">
+      <%= image_tag job.company.logo.url, class: "object-contain" %>
+    </div>
+    <%end%>
     <p class="font-normal"><%=job.company.name%></p>
     <div class="flex justify-between py-1">
       <p class="font-bold group-hover:underline decoration-red-500 decoration-2 mr-2 underline-offset-2 truncate"><%=job.title%></p>
