--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,8 +2,18 @@
 
 <%= render partial: '/jobs/search_form' %>
 
-<div class="w-11/12 md:w-1/2 mx-auto">
+<div class="w-11/12 md:w-1/2 mx-auto" id="jobs">
   <%= render partial: '/shared/job_preview', collection: @jobs, as: :job %>
+  <div data-controller="load-more">
+    <%= link_to request.params.merge(page: @page+1) do %>
+      <div class="flex flex-col justify-center items-center mx-auto w-1/2 sm:w-1/3 mb-2 rounded drop-shadow-md">
+        <p>See more Jobs</p>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 13.5L12 21m0 0l-7.5-7.5M12 21V3" />
+        </svg>
+      </div>
+    <%end%>
+  </div>
 <div>
 
 <div class="hidden">
