--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -14,18 +14,10 @@
         </span>
         <% end %>
       </div>
-      <div class="job-title py-2 mb-4">
-        <p class="text-gray-600">
-          <%= t(".posted") %> : <%= @job.created_at.strftime("%Y-%m-%d")%>
-        </p>
-        <p class="text-3xl font-bold my-2"><%=@job.title%></p>
-        <%= link_to @job.category.name, search_path(:keyword => @job.category.name) , class: "underline font-bold text-black py-1" %>
-        <p class="mb-2"><%= t(".location") %> : <%=@job.location.name%></p>
-      </div>
-      <%= @job.description%>
-      <div class="apply-button my-4 py-4">
-        <%= link_to t(".apply"), @job.application_url, target: :_blank, class:"bg-red-500 text-white p-3 font-semibold" %>
-      </div>
+        <div class="flex">
+            <%= render "jobs/left_side" %>
+            <%= render "jobs/right_side" %>
+        </div>
     </div>
   </div>
 </body>
