--- a/app/views/jobs/index.turbo_stream.erb
+++ b/app/views/jobs/index.turbo_stream.erb
@@ -1,3 +1,16 @@
 <%= turbo_stream.append "jobs" do %>
   <%= render partial: '/shared/job_preview', collection: @jobs, as: :job %>
 <% end %>
+
+<%= turbo_stream.update "next_link" do %>
+  <% if @pagy.next.present? %>
+      <%= button_to jobs_path(page: @pagy.next) do %>
+        <p>
+          see more Jobs
+        </p>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mx-auto">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 13.5L12 21m0 0l-7.5-7.5M12 21V3" />
+        </svg>
+      <%end%>
+  <% end %>
+<% end %>
