update dashboard links

--- a/app/views/dashboard/_left_bar.html.erb
+++ b/app/views/dashboard/_left_bar.html.erb
@@ -1,7 +1,7 @@
 <div class="w-3/12">
   <div class="flex flex-col">
-    <%= link_to root_path, class: "pb-4 mb-2 rounded hover:bg-yellow-500" do%>
-      <span class="">Home</span>
+    <%= link_to dashboard_path, class: "pb-4 mb-2 rounded hover:bg-yellow-500" do%>
+      <span class="">Dashboard</span>
     <%end%>
     <%= link_to root_path, class: "pb-4 mb-2 rounded hover:bg-yellow-500" do%>
       <span>My Company</span>
