--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,6 +11,6 @@
   </div>
 
   <div class="submit-field flex flex-col w-11/12 md:w-1/2 my-2">
-    <%= form.submit "Sign Up", class:"bg-red-500 cursor-pointer text-white rounded p-2 font-bold" %>
+    <%= form.submit "Sign up", class:"bg-red-500 cursor-pointer text-white rounded p-2 font-bold" %>
   </div>
 <% end %>
