--- a/app/views/dashboard/_links.html.erb
+++ b/app/views/dashboard/_links.html.erb
@@ -1,6 +1,6 @@
 <div class="w-6/12 flex">
-  <div>
-    <p>Create a new job for you Company</p>
-    <%= link_to 'New Job', new_dashboard_job_path %>
+  <div class="">
+    <p>Create a new job for you Company</p> <br/>
+    <span class="md:ml-2 bg-red-500 rounded text-white p-1 md:p-3 font-semibold m-3 "><%= link_to 'New Job', new_dashboard_job_path %></span>
   </div>
 <div>
