updatethe ui dashboard

--- a/app/views/dashboard/_main_page.html.erb
+++ b/app/views/dashboard/_main_page.html.erb
@@ -23,6 +23,6 @@
       <p><%= current_user.jobs.count %></p>
     </div>
   </div>
-
   <%= render partial: '/dashboard/links' %>
 </div>
+  <%= render 'recent_jobs'%>
