update dashboard ui

--- a/app/views/dashboard/_recent_jobs.html.erb
+++ b/app/views/dashboard/_recent_jobs.html.erb
@@ -1,4 +1,4 @@
-<div class="w-3/12">
+<div class="w-3/12 flex justify-items-end">
   <div class="flex flex-col">
     <%= link_to dashboard_path, class: "pb-4 mb-1 rounded font-semibold items-center hover:bg-yellow-500 py-4 p-6" do%>
       <span class="">Dashboard</span>
