add dashboard status and pass the logic when jobs are published , pending and when they are closed

--- a/app/views/shared/_job_preview.html.erb
+++ b/app/views/shared/_job_preview.html.erb
@@ -11,7 +11,7 @@
       <div class="flex items-center">
         <p class="mr-4"><%= format_date(job)%></p>
         <%if new_job?(job)%>
-        <p class=" bg-amber-400 py-1/2 px-1 mr-2 rounded font-semibold"><%= t("jobs.index.preview.new") %></p>
+        <p class="<%= job_status(job)[:classes] %> py-1/2 px-1 mr-2 rounded font-semibold"><%= job_status(job)[:status]%></p>
         <%end%>
       </div>
     </div>
