--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -8,7 +8,7 @@
 
 <div data-controller="load-more" id="load_more">
     <div class="flex flex-col justify-center text-center items-center mx-auto w-1/2 sm:w-1/3 mb-7 rounded drop-shadow-md" id="next_link">
-      <%= button_to jobs_path(page: @pagy.next) do %>
+      <%= button_to jobs_path(page: @pagy.first.next) do %>
         <p>
           see more Jobs
         </p>
