add button to publish jobs

--- a/app/views/dashboard/_main_page.html.erb
+++ b/app/views/dashboard/_main_page.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div>
     <h1 class="">Unpublished Jobs</h1>
-    <%= render partial: '/shared/job_preview', collection: @unpublished_jobs, as: :job%>
+    <%= render partial: '/dashboard/jobs/job_preview', collection: @unpublished_jobs, as: :job%>
   </div>
   <%= render partial: '/dashboard/links' %>
 </div>
