Allow admin to edit jobs in dashboard
we want to allow the admin to edit a job in the dashboard;
this commit adds a jobs page and an edit button to the job preview
partial

--- a/app/views/dashboard/_left_bar.html.erb
+++ b/app/views/dashboard/_left_bar.html.erb
@@ -6,9 +6,8 @@
     <%= link_to root_path, class: "pb-4 mb-1 rounded font-semibold hover:bg-yellow-500 py-4 p-2" do%>
       <span>My Company</span>
     <%end%>
-    <%= link_to jobs_path, class: "pb-4 mb-1 font-semibold rounded hover:bg-yellow-500 py-4 p-2" do%>
+    <%= link_to dashboard_jobs_path, class: "pb-4 mb-1 font-semibold rounded hover:bg-yellow-500 py-4 p-2" do%>
       <span>My Jobs</span>
-
     <%end%>
   </div>
 </div>
