Work on the subscription package

--- a/app/views/dashboard/_recent_jobs.html.erb
+++ b/app/views/dashboard/_recent_jobs.html.erb
@@ -3,7 +3,7 @@
     <%= link_to dashboard_path, class: "pb-4 mb-1 rounded font-semibold items-center hover:bg-yellow-500 py-4 p-6" do%>
       <span class="">Dashboard</span>
     <%end%>
-    <%= link_to root_path, class: "pb-4 mb-1 rounded font-semibold hover:bg-yellow-500 py-4 p-6" do%>
+    <%= link_to , class: "pb-4 mb-1 rounded font-semibold hover:bg-yellow-500 py-4 p-6" do%>
       <span>My Company</span>
     <%end%>
     <%= link_to jobs_path, class: "pb-4 mb-1 font-semibold rounded hover:bg-yellow-500 py-4 p-6" do%>
