--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @company do |form| %>
+<%= form_with model: @company, url: url do |form| %>
   <div class="field field flex flex-col w-1/2 my-2">
     <%= form.label :name, t("companies.new.labels.name"), class:"font-bold" %>
     <%= form.text_field :name %>
