--- a/app/views/dashboard/companies/show.html.erb
+++ b/app/views/dashboard/companies/show.html.erb
@@ -1,3 +1,3 @@
-<div class="flex w-full">
-  <h1><%= @company.name%></h1>
-</div>
+<%= render partial: '/companies/company_details' %>
+
+<%= link_to 'Edit Company', edit_dashboard_company_path(@company)%>
