Style side nav bar, add icons, persist active item state

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,4 @@
-<div class="flex w-full">
+<div class="flex w-full px-2">
   <%= render partial: '/dashboard/left_bar' %>
   <%= render partial: '/dashboard/main_page' %>
 </div>
