--- a/app/views/dashboard/_main_page.html.erb
+++ b/app/views/dashboard/_main_page.html.erb
@@ -1,15 +1,15 @@
-<div class="w-6/12">
+<div class="ml-4 md:w-6/12 w-10/12 h-auto pb-2">
   <h2 class="text-1xl font-bold ml-2">Hi,
     <% if name?(current_user) %>
       <%= current_user.name %>
     <%end%>
   </h2>
-  <div class="job-overview my-4  flex rounded p-2 w-100">
-    <div class="job-overview--this-week p-2 bg-gray-100 box-border w-1/3 rounded drop-shadow-md">
+  <div class="job-overview my-4  md:flex rounded p-2 w-100">
+    <div class="job-overview--this-week w-full p-2 bg-gray-100 box-border w-1/3 rounded drop-shadow-md">
       <h3 class="font-bold py-2">New Jobs this week</h3>
       <p class=""><%= current_user.jobs.count %></p>
     </div>
-    <div class="job-overview--this-week p-2 bg-gray-100 box-border w-1/3 ml-4 rounded drop-shadow-md">
+    <div class="job-overview--this-week w-full p-2 bg-gray-100 box-border w-1/3 md:ml-4 mt-2 md:mt-0 rounded drop-shadow-md">
       <h3 class="font-bold py-2">Top categories this week</h3>
       <% @top_categories.each do |category| %>
         <span class="flex ">
@@ -18,7 +18,7 @@
         </span>
       <%end%>
     </div>
-    <div class="job-overview--this-week p-2 bg-gray-100 box-border w-1/3 ml-4 rounded drop-shadow-md">
+    <div class="job-overview--this-week p-2 w-full bg-gray-100 box-border w-1/3 md:ml-4 mt-2 md:mt-0 rounded drop-shadow-md">
       <h3 class="font-bold py-2">Top locations this week</h3>
       <p><%= current_user.jobs.count %></p>
     </div>
