--- a/app/views/dashboard/jobs/edit.html.erb
+++ b/app/views/dashboard/jobs/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="flex w-full">
   <%= render partial: '/dashboard/left_bar' %>
-  <div class="w-6/12">
+  <div class="w-6/12 ml-2 md:ml-4">
     <h1><%= t(".page_title") %></h1>
     <%= render partial: '/dashboard/jobs/form', locals: { url: dashboard_job_path(@job), method: :put}%>
   </div>
