--- a/app/views/dashboard/_left_bar.html.erb
+++ b/app/views/dashboard/_left_bar.html.erb
@@ -1,18 +1,21 @@
 <div data-controller="sidebar" class="md:w-3/12 w-2/12 rounded-xl border border-gray-300 shadow p-2">
   <div class="flex flex-col">
     <%= link_to dashboard_path, class: "mb-1 flex justify-center md:justify-start rounded-xl items-center hover:bg-yellow-500 py-2 px-2", data: { sidebar_target: "link", action: "click->sidebar#setActive", path: dashboard_path } do %>
-      <%= fa_icon "tachometer", class: "far md:mr-2 fa-lg" %>
+      <%= heroicon "chart-pie", variant: :outline, options: { class: "h-[25px] w-[25px] md:mr-2 text-gray-800" } %>
+
       <span class="hidden md:block">Dashboard</span>
     <% end %>
 
     <%= link_to dashboard_jobs_path, class: "flex items-center justify-center md:justify-start mb-1 rounded-xl hover:bg-yellow-500 py-2 px-2", data: { sidebar_target: "link", action: "click->sidebar#setActive", path: dashboard_jobs_path } do %>
-      <%= fa_icon "building", class: "far md:mr-2 fa-lg" %>
-      <span class="hidden md:block">My Jobs</span>
+    <%= heroicon "briefcase", variant: :outline, options: { class: "h-[25px] w-[25px] md:mr-2 text-gray-800" } %>
+ 
+    <span class="hidden md:block">My Jobs</span>
     <% end %>
 
-    <%= link_to dashboard_company_path(current_user.current_company), class: "flex items-center justify-center md:justify-start mb-1 rounded-xl hover:bg-yellow-500 py-2 px-2", data: { sidebar_target: "link", action: "click->sidebar#setActive", path: dashboard_company_path(current_user.current_company) } do %>
-      <%= fa_icon "briefcase", class: "far md:mr-2 fa-lg" %>  
-      <span class="hidden md:block">My Company</span>
+    <%= link_to dashboard_company_path(current_user.current_company), class: "flex items-center justify-center md:justify-start mb-1 rounded-xl hover:bg-yellow-500 py-2 px-2", data: { sidebar_target: "link", action: "click->sidebar#setActive", path: dashboard_company_path(current_user.current_company) } do %> 
+    <%= heroicon "building-office", variant: :outline, options: { class: "h-[25px] w-[25px] md:mr-2 text-gray-800" } %>
+ 
+    <span class="hidden md:block">My Company</span>
     <% end %>
   </div>
 </div>
